--- a/_posts/2019-07-03-《图解HTTP协议-修改》.md
+++ b/_posts/2019-07-03-《图解HTTP协议-修改》.md
@@ -238,7 +238,7 @@ Set-Cookie的几个属性：
 
 1. **通用首部字段**：请求报文和响应报文都会使用的首部
 
-   常见：Cache-Control 操作缓存工作机制：public 其他用户也可利用缓存 / private 特定用户 / **no-cache 不缓存过期资源** / no-store 不缓存，有机密信息 / max-age 数值代表资源保存为缓存的最长时间 / min-fresh 要求缓存服务器返回 还未过指定时间的缓存资源 / max-stale 即使过期也照常接收 / no-transform 规定不能改变实体主体的媒体类型（防止压缩图片）；
+   常见：Cache-Control 操作缓存工作机制：public 其他用户也可利用缓存 / private 特定用户 / **no-cache 不缓存过期资源** 吧 / no-store 不缓存，有机密信息 / max-age 数值代表资源保存为缓存的最长时间 / min-fresh 要求缓存服务器返回 还未过指定时间的缓存资源 / max-stale 即使过期也照常接收 / no-transform 规定不能改变实体主体的媒体类型（防止压缩图片）；
 
    Connection：不再转发的首部字段名 / 管理持久连接 （默认都是持久连接） Close （断开连接）、Keep-Alive 持续连接（默认是非持久连接）；
 
