--- a/_posts/2019-07-07-js相关 面试问题.md
+++ b/_posts/2019-07-07-js相关 面试问题.md
@@ -235,7 +235,7 @@ this的最终指向的是那个调用它的对象。
 
 #### 8.给DOM元素绑定事件有哪几种方法？
 
-1.使用内联；2.使用`.onclick`的方式；3.使用事件监听`addEventListener`的方式；
+1.使用内联；2.使用`.onclick`的方式；3.使用事件监听`addEventListener`的方式；(IE使用attachEvent)
 
 **1、2两种方式都是存在一个弊端的，就是一个元素只能添加一个事件。**
 
@@ -292,6 +292,18 @@ this的最终指向的是那个调用它的对象。
 事件冒泡的概念下在p元素上发生click事件的顺序应该是**p -> div -> body -> html -> document**；
 
 事件捕获的概念下在p元素上发生click事件的顺序应该是**document -> html -> body -> div -> p**；
+
+接下来是摘自《红宝书》的总结：
+
+**事件流**描述的是从页面中接收事件的顺序。P348
+
+IE的事件流叫做**事件冒泡**：就是指事件开始时由最具体的元素（文档中嵌套层次最深的的那个节点）接收，然后逐级向上传播到较为不具体的节点（文档）。
+
+div-->body-->html-->document
+
+**事件捕获**：不太具体的节点应该更早接收到事件，而最具体的节点应该最后接收到事件。（用意在于在事件到达预定目标之前捕获它）
+
+document-->html-->body-->div
 
 
 
