--- a/_posts/2019-07-07-vue相关 面试问题.md
+++ b/_posts/2019-07-07-vue相关 面试问题.md
@@ -17,13 +17,25 @@ typora-root-url: ..
 
 #### 1. vue实现双向绑定的原理？
 
-数据双向绑定作为 Vue 核心功能之一，其实现原理主要分为两部分：
+[知乎--双向绑定的原理]: https://zhuanlan.zhihu.com/p/47541415	"参考链接"
 
-* 数据劫持
+MVVM 模式在于数据与视图的保持同步，意思是说数据改变时会自动更新视图，视图发生变化时会更新数据。
 
-* 发布订阅模式
+​        所以我们需要做的就是**如何检测到数据的变化然后通知我们去更新视图**，**如何检测到视图的变化然后去更新数据**。**检测视图这个比较简单，无非就是我们利用事件的监听即可**。那么如何才能知道数据属性发生变化呢？这个就是利用我们上面说到的 `Object.defineProperty` 当我们的属性发生变化时，它会自动**触发 set 函数从而能够通知我们去更新视图**。
 
-数据劫持是利用了 **Object.defineProperty() 方法重新定义了对象获取属性值get和设置属性值set的操作**来实现的；
+数据双向绑定作为 Vue 核心功能之一，Vue 则采用的**是数据劫持与发布订阅相结合的方式实现双向绑定**。
+
+其中数据劫持是利用了 **Object.defineProperty() 方法重新定义了对象获取属性值get和设置属性值set的操作**来实现的；
+
+![preview](/img/assets_2019/v2-0acc539d759e5bf7c4dedb9aafafdb45_r.jpg)
+
+劫持了数据之后，我们就需要一个监听器 Observer 来监听属性的变化。得知属性发生变化之后我们需要一个 Watcher 订阅者来更新视图，我们还需要一个 compile 指令解析器，用于解析我们的节点元素的指令与初始化视图。
+
+- Observer 监听器：用来监听属性的变化通知订阅者
+- Watcher 订阅者：收到属性的变化，然后更新视图（这个过程中我们可能会有很多个订阅者 Watcher 所以我们要创建一个容器 Dep 去做一个统一的管理）
+- Compile 解析器：解析指令，初始化模版，绑定订阅者
+
+
 
 **语法** `Object.defineProperty(obj,prop,descriptor)`
 
@@ -203,35 +215,50 @@ this.$root.$on("方法名",(传递的值)=>{ })
 
 注：
 
-1. 其中created和mounted中**ajax请求**的区别：created的时候视图未出现，请求较多的情况下，会出现**白屏**；
+created和mounted之间的区别：
+
+- created和mounted中**ajax请求**的区别：created的时候视图未出现，请求较多的情况下，会出现**白屏**；
+
+- created 是在模板渲染成html前调用，即通常初始化某些属性值，然后再渲染成视图，比如初始化、获取屏幕高度调整、赋值等等；
+
+  而mounted是在模板渲染成html后调用，通常是初始化页面完成后，再对html的dom节点进行一些需要的操作；
+
 2. 初始化组件的时候，仅执行beforeCreated/created/beforeMount/mounted四个钩子函数；
 3. 当改变data中定义的**响应式变量**时，会执行beforeUpadate/updated；
 4. 初始化和销毁时的钩子函数只会执行一次，beforeUpadate/updated**可执行多次**；
 5. 挂载的时候，子组件完成挂载后，父组件才会挂载；
 6. 当子组件完成挂载后，父组件会**主动执行一次**beforeUpdate/updated钩子函数（仅首次）；
-7. 销毁父组件时，先将子组件销毁后，才会销毁父组件；
-
-8. created 是加载DOM,html之后 就马上执行, 比如初始化,获取屏幕高度调整,赋值等等；
-
-而mounted就是执行包括js之后,准备开始调用方法,也就是说 类似传统开发那样,先加载jquery 再调用插件；
-
-9. 总结来说，虚拟dom开始渲染是在beforeMount时，dom实例挂载完成在mounted阶段显示。那么接下来了解就是render函数。render函数最终返回的是createNodeDescription(节点描述)，即俗称virtual node(虚拟节点)。
+6. 销毁父组件时，先将子组件销毁后，才会销毁父组件；
+7. 总结来说，虚拟dom开始渲染是在beforeMount时，dom实例挂载完成在mounted阶段显示。那么接下来了解就是render函数。render函数最终返回的是createNodeDescription(节点描述)，即俗称virtual node(虚拟节点)。
 
 
 
 #### 4. vuex的功能？能否进行兄弟组件之间的传值？
 
-vuex专为 Vue.js 应用程序开发的**状态管理模式**。主要用于管理vue中的数据，可以兄弟组件互相传值；
+vuex专为 Vue.js 应用程序开发的**状态管理模式**。它**采用集中式存储管理应用的所有组件的状态**，并以相应的规则保证状态以一种可预测的方式发生变化。
+
+主要用于管理vue中的数据，可以兄弟组件互相传值；
 
 ![](/img/assets_2019/vuex.png)
 
-state：管理项目的数据（进行数据初始化）；
+上图的解释：
 
-mutations：主要用于操作state中的数据`store.commit('increment')`；
+① **Vue Components** 是我们的 **vue 组件**，**组件**会触发（dispatch）一些事件或动作( **Actions**);
+② 我们在**组件**中发出的动作，肯定是想获取或者改变数据的，但是在 **vuex** 中，数据是集中管理的，我们不能直接去更改数据，所以会把这个动作提交（Commit）到 **Mutations** 中；
+③ 然后 **Mutations** 就去改变（Mutate）**State** 中的数据；
+④ 当 **State** 中的数据被改变之后，就会重新渲染（Render）到 **Vue Components** (组件)中去， **Vue Components** (组件)展示更新后的数据，完成一个流程。
 
-action：也可以直接修改state，**通过提交 mutation 的方式**，而非直接改变 `store.state.count`，是因为我们想要更明确地追踪到状态的变化；
+**Vuex 的核心是 Store**（仓库），相当于是一个容器，一个**Store实例中包含以下属性的方法：**
 
-getter：就像计算属性，getter 的返回值会根据它的依赖被缓存起来，且只有当它的依赖值发生了改变才会被重新计算；getter 接受 state 作为其第一个参数；
+**state** 定义属性（状态 、数据）
+**getters** 用来获取属性【就像计算属性，getter 的返回值会根据它的依赖被缓存起来，且只有当它的依赖值发生了改变才会被重新计算；getter 接受 state 作为其第一个参数；】
+**actions** 定义方法（动作）【也可以直接修改state，**通过提交 mutation 的方式**，而非直接改变 `this.$store.state.count`，是因为我们想要更明确地追踪到状态的变化；】
+**commit** 提交变化，修改数据的唯一方式就是显示的提交 mutations
+**mutations** 定义变化，处理状态（数据）的改变【操作state中的数据`store.commit('increment')`；】
+**mapGetters** 用来获取属性（数据）
+**mapActions** 用来获取方法（动作）state：管理项目的数据（进行数据初始化）；
+
+
 
 
 
