--- a/_posts/2019-06-19-对象及Json对象.md
+++ b/_posts/2019-06-19-对象及Json对象.md
@@ -133,7 +133,7 @@ function createObject(name,age) {
 
 ##### new构造函数的时候发生了四件事情：
 
-+ 1.在内存中开辟(**申请一块空闲的空间**)空间,存储创建的新的对象
++ 1.在内存中开辟(**申请一块空闲的空间**)空间，存储创建的新的对象
 + 2.把this设置为当前的对象 / 将构造函数的**作用域赋给新对象**
 + 3.**设置对象的属性和方法**的值 / 执行构造函数中的代码
 + 4.把这个对象返回 / **返回新对象**
