--- a/_posts/2019-07-03-《图解HTTP协议-修改》.md
+++ b/_posts/2019-07-03-《图解HTTP协议-修改》.md
@@ -119,7 +119,8 @@ Host：hackr.jp
 ③OPTIONS * HTTP/1.1.（这是用来查询HTTP服务器端支持的HTTP方法种类）
 
 如果用*代替URI的话， 表示对服务器本身发起请求。
-​
+
+
 
 - ### 常见请求头
 
@@ -148,6 +149,24 @@ Date: Tue, 11 Jul 2000 18:23:51 GMT      -- 请求发出的时间
 ```
 
 
+
+##### content-type常见的属性：--实体主体内对象的媒体类型
+
+1. **application/x-www-form-urlencoded** 
+
+浏览器的原生 form 表单，如果不设置 enctype 属性，那么最终就会以此方式提交数据；该种方式提交的数据放在 body 里面，数据按照 key1=val1&key2=val2 的方式进行编码，key 和 val 都进行了 URL 转码。
+
+2. **multipart/form-data**
+
+一个常见的 POST 提交方式，通常表单上传文件时使用该种方式。
+
+3. **application/json**
+
+告诉服务器消息主体是序列化后的 JSON 字符串。
+
+4. **text/xml**
+
+主要用来提交 XML 格式的数据。
 
 ​											
 
