--- a/_posts/2019-07-07-js相关 面试问题.md
+++ b/_posts/2019-07-07-js相关 面试问题.md
@@ -1073,3 +1073,8 @@ alert(sum);//13
 
 ![1571448536088](/img/assets_2019/1571448536088.png)
 
+
+
+#### 26.原型链
+
+![1572010026168](/img/assets_2019/1572010026168.png)
