--- a/_posts/2019-07-07-es6相关 面试问题.md
+++ b/_posts/2019-07-07-es6相关 面试问题.md
@@ -391,7 +391,7 @@ new Promise((resolve, reject) => {
 
 第二个及以后的then() 触发条件是第一个then()执行完成，并且将return值作为下一个then的参数；
 
-catch()触发条件是执行了reject()。
+**catch()触发条件是执行了reject()**，用于指定发生错误的时候的回调函数。
 
 需要注意的是**resolve与reject只能执行一个**。也就是说如果不加入判断的话，某一个先执行了，后面的就自动忽略了。
 
@@ -401,5 +401,7 @@ catch()触发条件是执行了reject()。
 
 需要注意的就是**await是强制把异步变成了同步，这一句代码执行完，才会执行下一句**。
 
- await必须用在async方法中
+ await必须用在async方法中；处理错误的方法：
+
+![1572012187509](/img/assets_2019/1572012187509.png)
 
