贝贝滴滴面经整理
贝贝滴滴面经整理

--- a/_posts/2019-07-03-《图解HTTP协议-修改》.md
+++ b/_posts/2019-07-03-《图解HTTP协议-修改》.md
@@ -221,6 +221,8 @@ Set-Cookie的几个属性：
 
 
 
+面试被问过：301和302有什么区别？
+
 - 301 Moved Permanently **永久性重定向**。表示请求的资源已被分配了新的URI，**以后应使用新URL**。
 - **302**  Found **临时性重定向**。表示请求的资源已被分配了新的URI，**本次请求暂且使用新URL**。
 - 307 Temporary Redirect 临时性重定向。与302含义相同。
