--- a/_posts/2019-07-07-js相关 面试问题.md
+++ b/_posts/2019-07-07-js相关 面试问题.md
@@ -1078,3 +1078,122 @@ alert(sum);//13
 #### 26.原型链
 
 ![1572010026168](/img/assets_2019/1572010026168.png)
+
+#### 27.删除表格的第一行有哪些方法
+
+方法一：removeChild
+
+```javascript
+var tds = table.getElementsByTagName("td");
+var tr = tds[0].parentNode;
+tr.parentNode.removeChild(tr);
+```
+
+方法二：deleteRow
+
+```javascript
+var trs = document.getElementsByTagName("tr");
+var table = document.getElementById("table");
+table.deleteRow(0);//删除第一行
+```
+
+方法三：jQuery：remove、detach、empty
+
+```javascript
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+function delRow(row_id){ 
+  $(row_id).remove(); //方法1，删移除元素及它的数据和事件
+  $(row_id).detach(); //方法2，移除被选元素，包括所有的文本和子节点。然后它会保留数据和事件。
+  $(del).empty(); //方法3，从被选元素移除内容
+} 
+```
+
+方法四：样式
+
+```javascript
+var tds = table.getElementsByTagName("td");
+var tr = tds[0].parentNode;
+tr.style.display='none';//方法1，不保留原有位置
+tr.style.opacity=0;//方法2，保留原有位置
+tr.style.visibility='hidden';//方法3，保留原有位置
+```
+
+#### 28.jQuery有哪些方法可以选择一个表格中的第一行
+
+```javascript
+$("#id") //id=“id”的元素
+$(".class") //class=“class”的元素
+$("p") //所有<p>元素
+$(".intro.demo") //所有 class="intro" 且 class="demo" 的元素
+$("p:first") //第一个<p>元素
+$("p:last")	//最后一个<p>元素
+$("tr:even") //所有偶数<tr>元素
+$("tr:odd")	//所有奇数<tr>元素
+$("ul li:eq(3)") //列表中的第四个元素（index从0开始）
+$("ul li:gt(3)") //列出index大于3的元素
+$("ul li:lt(3)") //列出index小于3的元素
+$("[href]")	//所有带有href属性的元素
+$(":input")	//所有<input>元素
+$(":checked") //所有被选中的input元素
+```
+
+#### 29.扁平化一个嵌套的数组
+
+```javascript
+let arrays = [1, [2, [3, [4, 5]]], 6];
+```
+
+需求：多维数组=>一维数组
+
+第一种方法：直接调用arr的flat方法
+
+```javascript
+arr = arrays.flat(Infinity);//[1, 2, 3, 4, 5, 6]
+```
+
+第二种方法：正则表达式
+
+```javascript
+let str = JSON.stringify(arrays);
+arr = str.replace(/(\]|\[)/g, '').split(',');//["1", "2", "3", "4", "5", "6"]
+```
+
+第三种：正则表达式
+
+```javascript
+str = str.replace(/(\[|\])/g, '');
+str = '[' + str + ']';
+ary = JSON.parse(str);//[1, 2, 3, 4, 5, 6]
+```
+
+第四种：递归
+
+```javascript
+let result = [];
+function fn(array) {
+    for (let i = 0; i < array.length; i++) {
+        let item = array[i];
+        if (Array.isArray(array[i])) {
+            fn(item);
+        } else {
+            result.push(item);
+        }
+    }
+}
+fn(arrays)
+```
+
+第五种：reduce
+
+```javascript
+
+```
+
+第六种：...扩展运算符
+
+```javascript
+while (arrays.some(Array.isArray)) {
+	arrays = [].concat(...arrays);
+}//[1, 2, 3, 4, 5, 6]
+```
+
