博客初整理
博客初整理

--- a/_posts/2019-06-16-一句话描述创建对象.md
+++ b/_posts/2019-06-16-一句话描述创建对象.md
@@ -11,13 +11,26 @@ tags:
 typora-root-url: ..
 ---
 
-
+摘录自红宝书P144以及P174的小结
 
 ### 工厂模式
 
 使用简单的函数创建对象，对对象添加属性和方法，然后返回对象。
 
 缺点：无法识别对象类型，所有的实例都指向**一个原型**。
+
+```javascript
+function createObject(name,age) {
+    var obj = new Object();
+    obj.name = name;
+    obj.age = age;
+    obj.getName = function () {
+        console.log(this.name);
+    };
+    return obj;
+}
+var person = createPerson('Alice',18);
+```
 
 ### 构造函数模式
 
@@ -27,6 +40,16 @@ typora-root-url: ..
 
 缺点：**每个方法**否要在每个实例上重新创建一遍，**无法复用**。
 
+```javascript
+function Person(name) {
+    this.name = name;
+    this.getName = function () {
+        console.log(this.name);
+    };
+}
+var person = new Person('Alice');
+```
+
 ### 原型模式
 
 使用构造函数的**`prototype`**属性来指定要共享的属性和方法。
@@ -35,11 +58,33 @@ typora-root-url: ..
 
 缺点：全部属性和方法都共享；**不能初始化参数**。
 
+```javascript
+function Person(name) {
+}
+Person.prototype.name = 'Alice';
+Person.prototype.getName = function () {
+    console.log(this.name);
+};
+var person = new Person();
+```
+
 ####  原型模式--更好得封装
 
 用一个包含所有属性和方法的对象字面量来重写整个原型对象。
 
  缺点：重写了原型，constructor属性不再指向构造函数。
+
+```javascript
+function Person(name) {
+}
+Person.prototype = {
+    name: 'Alicwe',
+    getName: function () {
+        console.log(this.name);
+    }
+};
+var person = new Person();
+```
 
 #### 原型模式--取回constructor属性
 
@@ -47,9 +92,37 @@ typora-root-url: ..
 
 优点：通过constructor属性可以重新访问构造函数。
 
+缺点：原型模式的缺点，即不能初始化参数，所有参数和方法都共享
+
+```javascript
+function Person(name) {
+}
+Person.prototype = {
+    constructor: Person,
+    name: 'kevin',
+    getName: function () {
+        console.log(this.name);
+    }
+};
+var person1 = new Person();
+```
+
 ### 组合使用构造函模式和原型模式
 
 构造函数用于定义实例属性，原型模式用于定义方法和共享的属性。
+
+```javascript
+function Person(name) {
+    this.name = name;
+}
+Person.prototype = {
+    constructor: Person,
+    getName: function () {
+        console.log(this.name);
+    }
+};
+var person = new Person();
+```
 
 ###  动态原型模式
 
@@ -57,13 +130,61 @@ typora-root-url: ..
 
 优点：保持了构造模式和原型模式的优点。
 
+```javascript
+function Person(name) {
+    this.name = name;
+    if (typeof this.getName != "function") {
+        Person.prototype.getName = function () {
+            console.log(this.name);
+        }
+    }
+}
+var person = new Person();
+```
+
 ### 寄生构造函数模式
 
 创建一个构造函数，封装创建对象的代码，然后返回新创建的对象。
 
-返回的对象与构造函数或者构造函数的原型之间没有关系，不能用instanceof来确定对象类型
+返回的对象与构造函数或者构造函数的原型之间没有关系，不能用instanceof来确定对象类型。
+
+和工厂模式相比，就是多使用了一个new，实际上两者的结果是一样的
+
+```javascript
+function Person(name) {
+    var obj = new Object();
+    obj.name = name;
+    obj.getName = function () {
+        console.log(this.name);
+    };
+    return obj;
+}
+var person = new Person('Alice');
+console.log(person1 instanceof Person) // false
+console.log(person1 instanceof Object)  // true
+```
 
 ###  稳妥构造函数模式
 
 在构造函数中创建新对象，添加方法，返回新对象。**不添加公共属性，方法中也不使用this对象**。
+
+```javascript
+function person(name){
+    var obj = new Object();
+    obj.sayName = function(){
+        console.log(name);
+    };
+    return obj;
+}
+
+var person = person('Alice');
+person1.sayName(); // Alice
+
+person1.name = "daisy";
+person1.sayName(); // Alice
+
+console.log(person1.name); // daisy
+```
+
+
 
