--- a/_posts/2019-06-19-对象及Json对象.md
+++ b/_posts/2019-06-19-对象及Json对象.md
@@ -105,8 +105,11 @@ var 变量名= new Object();  // Object 是系统的构造函数
 	    console.log(this.sex);
 	};
 ```
-#### 工厂模式创建对象
- 解决了**如何一次性创建多个对象**--把创建对象的代码封装在一个函数中
+#### --工厂模式创建对象--
+优点：解决了**如何一次性创建多个对象**--把创建对象的代码封装在一个函数中
+
+缺点：对象无法识别，因为所有的实例都指向一个原型
+
  ```javascript
 function createObject(name,age) {
 	var obj = new Object();//创建对象
@@ -119,24 +122,18 @@ function createObject(name,age) {
 	};
 	//记得一定要有返回值
 	return obj;
-	}
+}
+var person = createObject('Alice',32);
  ```
 
-#### 2.自定义构造函数创建对象：先自定义一个构造函数，再创建对象
-(结合第一种和需求通过工厂模式创建对象)
 
-##### 如何获取该变量(对象)是不是属于什么类型的?
 
-* 语法:变量 `instanceof` 类型的名字
+#### 2.--自定义构造函数创建对象--：
 
-**函数和构造函数的区别**：名字是不是大写(首字母是大写)
+优点：实例可以识别为一个特定的类型
 
-##### new构造函数的时候发生了四件事情：
+缺点：每次创建实例时，每个方法都要被创建一次
 
-+ 1.在内存中开辟(**申请一块空闲的空间**)空间，存储创建的新的对象
-+ 2.把this设置为当前的对象 / 将构造函数的**作用域赋给新对象**
-+ 3.**设置对象的属性和方法**的值 / 执行构造函数中的代码
-+ 4.把这个对象返回 / **返回新对象**
 ```javascript
 	function Person(name,age) {
 		this.name=name;
@@ -145,18 +142,15 @@ function createObject(name,age) {
 			console.log(this.name + this.age);
 		};
 	}
+
     //自定义构造函数创建对象:
 	var obj=new Person("小明",10);
-	console.log(obj.name);
-	console.log(obj.age);
-	obj.sayHi();
 	var obj2=new Person("小红",20);
-	console.log(obj2.name);
-	console.log(obj2.age);
-	obj2.sayHi();
-//创建对象----实例化一个对象，并初始化
-console.log(obj instanceof Person);//true
-console.log(obj2 instanceof Person);//true
+
+    //创建对象----实例化一个对象，并初始化
+    //如何获取该变量(对象)是不是属于什么类型的? 语法:变量 `instanceof` 类型的名字
+    console.log(obj instanceof Person);//true
+    console.log(obj2 instanceof Person);//true
 ```
 
 **工厂模式、自定义构造函数的共同点**：都是函数,都可以创建对象,都可以传入参数；
