--- a/_posts/2019-07-07-js相关 面试问题.md
+++ b/_posts/2019-07-07-js相关 面试问题.md
@@ -203,7 +203,7 @@ this的最终指向的是那个调用它的对象。
 3. 使用**apply、call、bind**
 4. new**实例化一个对象**；
 
-
+在非严格模式下，如果如果函数没有用作构造函数，而是仅仅作为普通函数使用的话，那么函数中的this是指向window的。在严格模式下，this的值就是undefined。
 
 #### 7.js的执行机制：Event loop
 
@@ -1186,7 +1186,11 @@ fn(arrays)
 第五种：reduce
 
 ```javascript
-
+const flatten = (arr) => {
+  return arr.reduce((prev, next) => {
+    return prev.concat(Object.prototype.toString.call(next) === '[object Array]' ? flatten(next): next)
+  }, [])
+}
 ```
 
 第六种：...扩展运算符
