--- a/_posts/2019-07-07-js相关 面试问题.md
+++ b/_posts/2019-07-07-js相关 面试问题.md
@@ -1075,9 +1075,11 @@ alert(sum);//13
 
 
 
-#### 26.原型链
+#### 26.画一下原型链，`prototype`和`__proto__`有什么区别
 
 ![1572010026168](/img/assets_2019/1572010026168.png)
+
+
 
 #### 27.删除表格的第一行有哪些方法
 
