--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -1554,7 +1554,6 @@ setTimeout(() => {
 22. 在实习的项目中，你学到了什么？你认为现在的项目有什么可以优化的地方？
 23. 公司要求写代码，用js原生仿照发布者订阅者模式写。
 24. 写一个左侧导航栏，不能调试，鼠标移动底部变色，参照京东左侧导航栏
-25. 原型链有了解么？简单描述一下
 26. 虚拟DOM说一下？在生命周期里的对应阶段？
 27. 用的前端组件是什么？
 28. 画一下项目的界面结构并且简单介绍下项目
@@ -1607,7 +1606,6 @@ setTimeout(() => {
 70. get和post的区别
 71. use strict是什么？
 72. 什么是window对象？什么是document对象
-73. 原型链 构造函数、实例对象、原型之间的关系图
 75. 替代图片有哪几种
 76. MVVM的原理
 77. 输入http到渲染到页面，发生了什么
@@ -1634,7 +1632,6 @@ setTimeout(() => {
 96. 三次握手中，服务端在发送ACK包+SYN包时做了什么
 97. 线程和进程有什么区别
 98. 手写一个单向链表
-99. 画一下原型链？`_prototype_`和`__proto__`有什么区别
 100. BFC是什么？有哪几种实现方式？适用场景？
 101. this指向？如何改变？
 102. vuex请求？原理？
@@ -1660,5 +1657,5 @@ setTimeout(() => {
 122. vuex的工作流程
 123. vuex和redux的区别？
 124. three.js学得怎么样
-125. 0
+125. 学习有关正则表达式的API，例如exec、test
 
