--- a/_posts/2019-07-07-js相关 面试问题.md
+++ b/_posts/2019-07-07-js相关 面试问题.md
@@ -1079,11 +1079,21 @@ alert(sum);//13
 
 ![1572010026168](/img/assets_2019/1572010026168.png)
 
+`prototype`和`__proto__`有什么区别：
 
+![1575295251658](/img/assets_2019/1575295251658.png)
+
+`__proto__`指向的是这个对象的构造函数的prototype；A函数的构造函数是Object
+
+![1575295456546](/img/assets_2019/1575295456546.png)
 
 #### 27.删除表格的第一行有哪些方法
 
 方法一：removeChild
+
+
+
+
 
 ```javascript
 var tds = table.getElementsByTagName("td");
