--- a/_posts/2019-07-07-vue相关 面试问题.md
+++ b/_posts/2019-07-07-vue相关 面试问题.md
@@ -899,3 +899,21 @@ beforeRouteEnter(to, from, next) {
 }
 ```
 
+
+
+#### 14.data为什么要用return？不是为了使每个组件有独立的数据？（摘自vue官方文档）
+
+当一个**组件**被定义，`data` 必须声明为返回一个初始数据对象的函数，因为组件可能被用来创建多个实例。如果 `data` 仍然是一个纯粹的对象，则所有的实例将**共享引用**同一个数据对象！通过提供 `data` 函数，每次创建一个新实例后，我们能够调用 `data` 函数，从而返回初始数据的一个全新副本数据对象。
+
+
+
+#### 15.vue中的定时器，一般在哪个生命周期中清除
+
+在beforeDestroy（）里面清除定时器，
+
+```javascript
+beforeDestroy() {
+    clearInterval(this.timer);        
+    this.timer = null;
+}
+```
