--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -1612,10 +1612,10 @@ setTimeout(() => {
 78. 创建一个对象有哪几种方法（字面量、构造函数、工厂模式）
 80. 基本数据类型和引用数据类型的区别
 81. 箭头函数和普通函数的区别，普通函数this的指向问题
-82. 数组去重方法？set有那些用处？
+82. set有那些用处？
 84. for循环可以用什么代替（reduce）说说reduce
 85. js中遍历对象的方法？for in能否遍历出原型对象？
-86. vue生命周期？created和mounted的区别？
+86. created和mounted的区别？
 87. vue中v-model的原理？说一下Object.defineProperty上的方法？
 88. 知道vue3.0中的proxy么？
 89. v-if与v-show  computed与watched的区别和应用场景？
@@ -1632,13 +1632,9 @@ setTimeout(() => {
 96. 三次握手中，服务端在发送ACK包+SYN包时做了什么
 97. 线程和进程有什么区别
 98. 手写一个单向链表
-100. BFC是什么？有哪几种实现方式？适用场景？
-101. this指向？如何改变？
 102. vuex请求？原理？
 103. vue双向绑定？只知道Object.defineProperty不够
-104. 垂直水平居中有哪些方法
 106. 父子传值？vuex、bus，知道eventbus吗？
-107. 清除浮动有哪些方法
 108. vue生命周期有哪些？destroy用过吗？
 110. 手写代码实现一个eventbus。分别实现三种方法listen、trigger、remove
 111. 回流和重绘
@@ -1656,4 +1652,5 @@ setTimeout(() => {
 123. vuex和redux的区别？
 124. three.js学得怎么样
 125. 学习有关正则表达式的API，例如exec、test
+118. 
 
