父子组件生命周期执行顺序

--- a/_posts/2019-07-07-vue相关 面试问题.md
+++ b/_posts/2019-07-07-vue相关 面试问题.md
@@ -224,12 +224,20 @@ created和mounted之间的区别：
   而mounted是在模板渲染成html后调用，通常是初始化页面完成后，再对html的dom节点进行一些需要的操作；
 
 2. 初始化组件的时候，仅执行beforeCreated/created/beforeMount/mounted四个钩子函数；
+
 3. 当改变data中定义的**响应式变量**时，会执行beforeUpadate/updated；
+
 4. 初始化和销毁时的钩子函数只会执行一次，beforeUpadate/updated**可执行多次**；
+
 5. 挂载的时候，子组件完成挂载后，父组件才会挂载；
+
+   注意：在传值的时候，如果父组件在mounted传给子组件值，子组件是没有办法在created里面使用的![image-20200313134842340](/../../Library/Application Support/typora-user-images/image-20200313134842340.png)![图片描述](/img/assets_2019/156466691112.png)
+
 6. 当子组件完成挂载后，父组件会**主动执行一次**beforeUpdate/updated钩子函数（仅首次）；
-6. 销毁父组件时，先将子组件销毁后，才会销毁父组件；
-7. 总结来说，虚拟dom开始渲染是在beforeMount时，dom实例挂载完成在mounted阶段显示。那么接下来了解就是render函数。render函数最终返回的是createNodeDescription(节点描述)，即俗称virtual node(虚拟节点)。
+
+7. 销毁父组件时，先将子组件销毁后，才会销毁父组件；
+
+8. 总结来说，虚拟dom开始渲染是在beforeMount时，dom实例挂载完成在mounted阶段显示。那么接下来了解就是render函数。render函数最终返回的是createNodeDescription(节点描述)，即俗称virtual node(虚拟节点)。
 
 
 
