父子组件生命周期执行顺序图片修改

--- a/_posts/2019-07-07-vue相关 面试问题.md
+++ b/_posts/2019-07-07-vue相关 面试问题.md
@@ -231,7 +231,7 @@ created和mounted之间的区别：
 
 5. 挂载的时候，子组件完成挂载后，父组件才会挂载；
 
-   注意：在传值的时候，如果父组件在mounted传给子组件值，子组件是没有办法在created里面使用的![image-20200313134842340](/../../Library/Application Support/typora-user-images/image-20200313134842340.png)![图片描述](/img/assets_2019/156466691112.png)
+   注意：在传值的时候，如果父组件在mounted传给子组件值，子组件是没有办法在created里面使用的![image-20200313140536045](/img/assets_2019/image-20200313140536045.png)![图片描述](/img/assets_2019/156466691112.png)
 
 6. 当子组件完成挂载后，父组件会**主动执行一次**beforeUpdate/updated钩子函数（仅首次）；
 
