--- a/_posts/2019-07-08-面试题整理 .md
+++ b/_posts/2019-07-08-面试题整理 .md
@@ -2,7 +2,7 @@
 layout:     post
 title:      面试题整理
 subtitle:  
-date:       2019-07-07
+date:       2019-07-08
 author:     
 header-img: 
 catalog: true
@@ -675,7 +675,7 @@ session的用户数据是保存在**服务器为用户浏览器单独创建的se
 
 查看全局目录：`npm root -g`
 
-修改全局目录的路径：`npm config set prefix ``"新路径"`
+修改全局目录的路径：`npm config set prefix "新路径"`
 默认情况下全局安装的包不能直接在项目中加载，如果要直接加载，需要在系统环境变量中添加一个名为 NODE_PATH 的变量，值为全局安装目录下 node_modules 位置。
 
 查看npm配置 `npm config list`
@@ -1536,120 +1536,210 @@ setTimeout(() => {
 
 
 1. Canvas绘图；
-3. Ajax遇到拦截器，请求数据要重新处理怎么做？
-4. vue-cli如何使用json数据模拟？
-6. bootstrap用了哪些，jQuery用了哪些，css选择器有哪几种，有哪些优先级，+  > 分别表示什么，子代/后代
-7. 项目中轮播图、列表、联动、递归展示使用，后台数据怎么模拟，获取的地址是怎么写的，面试官会详细听，问到代码，甚至会给出一定的意见（v-for改为数组管理），项目的难点在哪里
-8. 学习的方法有哪些，《js高级程序设计》中函数重载了解吗
-9. eval()函数可以解释由js源代码组成的字符串吗？该函数能用调试工具进行断点调试吗？该函数是js自带的函数，会不会引起安全性问题？该函数动态解释字符串，会存在效率问题吗？
-12. 属性document.body.scrolWidth表示网页中滚动条的宽度吗？
-13. js或DOM操作方便，浏览器兼容的注意项有哪些
-14. Web前端开发常见的安全漏洞
-15. 轮播图的实现及后台数据抓取
-16. 安全性，在无法使用HTTPS的情况下，局域网如何实现防止报文攻击
-17. 列举常用浏览器以及说明其内核
-19. 可以通过什么途径查看一个网站所使用的技术
-20. react的核心是什么
-21. 为什选择`vue+element`这样一个体系搭建系统？有什么吗优点？
-22. 在实习的项目中，你学到了什么？你认为现在的项目有什么可以优化的地方？
-23. 公司要求写代码，用js原生仿照发布者订阅者模式写。
-24. 写一个左侧导航栏，不能调试，鼠标移动底部变色，参照京东左侧导航栏
-26. 虚拟DOM说一下？在生命周期里的对应阶段？
-27. 用的前端组件是什么？
-28. 画一下项目的界面结构并且简单介绍下项目
-29. 问了一下通讯录界面的布局
-30. 验证码有写过没
-31. npm有学过除简单命令之外的服务构建么？
-33. echarts有用过么？WebGL知道么？
-34. 数据结构了解多少？数据库呢？
-35. es6怎么声明类？继承怎么写？提出是为了解决什么问题？
-36. 在这半年多的学习过程中，觉得前端学习的难点在哪里：封装的太好，原生其实很难
-37. 评价一下现在实习的这个项目，包括系统设计之类的：优点：功能和样式都还原了 缺点：html和样式耦合；组件化成都不高，代码难以维护
-38. 怎么样去查看内存、性能：性能chrome调试的时候用network的网络选项，内存不清楚
-39. react用过吗？讲了一下react和vue之前，jQuery和bootstrap，问学过吗？
-40. 数据结构、算法之类的了解吗：学习过但是使用较少，大致讲了下堆栈；讲一下数组去重的题；思想很重要
-42. 实现0.5px横线
-43. 盒子模型height
-44. 定时器一秒加一次
-62. Webscoket（解决痛点）
-47. Vue写插件的时候，比较核心的install方法是怎么实现的
-48. 我现有项目里面使用的微信开发者工具是比较原生的小程序开发方法，有没有了解过比较新的小程序写法
-49. es6中Promise、async await、generator分别是怎么使用的，
 
-她给了一个场景：按序分别请求三次数据，前一次调用结束才能开始下一次，怎么写
+2. Ajax遇到拦截器，请求数据要重新处理怎么做？
 
-我回答：在promise里面，await+请求方法，resolve的时候回调下一个请求
+3. vue-cli如何使用json数据模拟？
 
-她说这种性能比较低，链式的结果就是一个常见的回调地狱
+4. bootstrap用了哪些，jQuery用了哪些，css选择器有哪几种，有哪些优先级，+  > 分别表示什么，子代/后代
 
-50. 高度塌陷一般出现在哪些场景？怎么解决？
-52. keep-alive标签的原理是什么？有什么功能？
-53. http里面cache-control了解吗？有什么作用？
-54. 在页面中的动画，设置一个定时器，间隔一段时间就动一次，考虑性能，以及考虑整个页面的刷新时间，应该设置多长时间？我？？？不知道要问我什么，我说我平常是写死的，500ms
-55. 在同源的标签里面要传递数据，会用什么方法？
+5. 项目中轮播图、列表、联动、递归展示使用，后台数据怎么模拟，获取的地址是怎么写的，面试官会详细听，问到代码，甚至会给出一定的意见（v-for改为数组管理），项目的难点在哪里
 
-我回答不考虑安全性就是local storage，websocket也有（这个问题没查过，做笔试的时候做到过，只知道有这个方法，但是不知道怎么用）
+6. 学习的方法有哪些，《js高级程序设计》中函数重载了解吗
 
-56. ajax的原理
-58. rem是基于什么原理进行适配的
-60. 面向对象的基本特性（3个）
-61. 类数组对象是什么
-62. 参数系列化
-63. z-index的生效前提
-64. react生命周期
-65. ==和===的区别
-66. null和undefined的区别
-67. 用typeof bar===‘objec’验证的风险
-68. NaN是什么？是什么类型？验证它的函数？
-69. this的作用域是什么
-70. get和post的区别
-71. use strict是什么？
-72. 什么是window对象？什么是document对象
-75. 替代图片有哪几种
-76. MVVM的原理
-77. 输入http到渲染到页面，发生了什么
-78. 创建一个对象有哪几种方法（字面量、构造函数、工厂模式）
-80. 基本数据类型和引用数据类型的区别
-81. 箭头函数和普通函数的区别，普通函数this的指向问题
-82. set有那些用处？
-84. for循环可以用什么代替（reduce）说说reduce
-85. js中遍历对象的方法？for in能否遍历出原型对象？
-86. created和mounted的区别？
-87. vue中v-model的原理？说一下Object.defineProperty上的方法？
-88. 知道vue3.0中的proxy么？
-89. v-if与v-show  computed与watched的区别和应用场景？
-90. 浏览器策略--同源策略
-91. 写一个函数判断一个字符串回文
-92. 写一个方法将多个对象合并成一个对象（大概是这个，当时我理解错了）
-93. css写得多不，常用布局
-96. vue-router原理
-91. 计算机网络中，客户端发送请求到客户端可以怎么发送
-92. 用style和.css文件引入css样式有什么不同？分别适用于什么场景？
-93. 项目中的公共样式是使用提取出来的单独文件好，还是统一放在style里面好？
-94. 使用rem作为手机端适配单位的过程中有没有遇到什么问题？会不会出现用px更好的情况？
-95. 什么是http协议？
-96. 三次握手中，服务端在发送ACK包+SYN包时做了什么
-97. 线程和进程有什么区别
-98. 手写一个单向链表
-102. vuex请求？原理？
-103. vue双向绑定？只知道Object.defineProperty不够
-106. 父子传值？vuex、bus，知道eventbus吗？
-108. vue生命周期有哪些？destroy用过吗？
-110. 手写代码实现一个eventbus。分别实现三种方法listen、trigger、remove
-111. 回流和重绘
-112. XSS脚本攻击
-113. input、onmousedown、onmouseup、click、onfocus之间的区别
-114. fetch请求是什么
-115. 缓存相关Header
-116. node里的事件机制
-117. Promise常用API有哪些？
-118. await后面跟的是什么？
-119. 解释一下es6的Symbol，Symbol解决了什么问题？
-120. 介绍一下map和set
-121. defineProperty的缺陷？怎么解决这个问题？
-122. vuex的工作流程
-123. vuex和redux的区别？
-124. three.js学得怎么样
-125. 学习有关正则表达式的API，例如exec、test
-118. 
+7. eval()函数可以解释由js源代码组成的字符串吗？该函数能用调试工具进行断点调试吗？该函数是js自带的函数，会不会引起安全性问题？该函数动态解释字符串，会存在效率问题吗？
+
+8. 属性document.body.scrolWidth表示网页中滚动条的宽度吗？
+
+9. js或DOM操作方便，浏览器兼容的注意项有哪些
+
+10. Web前端开发常见的安全漏洞
+
+11. 轮播图的实现及后台数据抓取
+
+12. 安全性，在无法使用HTTPS的情况下，局域网如何实现防止报文攻击
+
+13. 列举常用浏览器以及说明其内核
+
+14. 可以通过什么途径查看一个网站所使用的技术
+
+15. react的核心是什么
+
+16. 为什选择`vue+element`这样一个体系搭建系统？有什么吗优点？
+
+17. 公司要求写代码，用js原生仿照发布者订阅者模式写。
+
+18. 写一个左侧导航栏，不能调试，鼠标移动底部变色，参照京东左侧导航栏
+
+19. 虚拟DOM说一下？在生命周期里的对应阶段？
+
+20. 用的前端组件是什么？
+
+21. 问了一下通讯录界面的布局
+
+22. 验证码有写过没
+
+23. npm有学过除简单命令之外的服务构建么？
+
+24. echarts有用过么？WebGL知道么？
+
+25. 数据结构了解多少？数据库呢？
+
+26. es6怎么声明类？继承怎么写？提出是为了解决什么问题？
+
+27. 怎么样去查看内存、性能：性能chrome调试的时候用network的网络选项，内存不清楚
+
+28. react用过吗？讲了一下react和vue之前，jQuery和bootstrap，问学过吗？
+
+29. 数据结构、算法之类的了解吗
+
+30. 实现0.5px横线
+
+31. 盒子模型height
+
+32. 定时器一秒加一次
+
+33. Webscoket（解决痛点）
+
+34. Vue写插件的时候，比较核心的install方法是怎么实现的
+
+35. 我现有项目里面使用的微信开发者工具是比较原生的小程序开发方法，有没有了解过比较新的小程序写法
+
+36. es6中Promise、async await、generator分别是怎么使用的，她给了一个场景：按序分别请求三次数据，前一次调用结束才能开始下一次，怎么写
+
+    我回答：在promise里面，await+请求方法，resolve的时候回调下一个请求
+
+    她说这种性能比较低，链式的结果就是一个常见的回调地狱
+
+37. keep-alive标签的原理是什么？有什么功能？
+
+38. http里面cache-control了解吗？有什么作用？
+
+39. 在页面中的动画，设置一个定时器，间隔一段时间就动一次，考虑性能，以及考虑整个页面的刷新时间，应该设置多长时间？我？？？不知道要问我什么，我说我平常是写死的，500ms
+
+40. 在同源的标签里面要传递数据，会用什么方法？
+
+41. 我回答不考虑安全性就是local storage，websocket也有（这个问题没查过，做笔试的时候做到过，只知道有这个方法，但是不知道怎么用）
+
+42. ajax的原理
+
+43. rem是基于什么原理进行适配的
+
+44. 面向对象的基本特性（3个）
+
+45. 类数组对象是什么
+
+46. 参数系列化
+
+47. z-index的生效前提
+
+48. react生命周期
+
+49. ==和===的区别
+
+50. null和undefined的区别
+
+51. 用typeof bar===‘objec’验证的风险
+
+52. NaN是什么？是什么类型？验证它的函数？
+
+53. this的作用域是什么
+
+54. use strict是什么？
+
+55. 什么是window对象？什么是document对象
+
+56. 替代图片有哪几种
+
+57. MVVM的原理
+
+58. 输入http到渲染到页面，发生了什么
+
+59. 创建一个对象有哪几种方法（字面量、构造函数、工厂模式）
+
+60. 基本数据类型和引用数据类型的区别
+
+61. 箭头函数和普通函数的区别，普通函数this的指向问题
+
+62. set有那些用处？
+
+63. for循环可以用什么代替（reduce）说说reduce
+
+64. js中遍历对象的方法？for in能否遍历出原型对象？
+
+65. created和mounted的区别？
+
+66. vue中v-model的原理？说一下Object.defineProperty上的方法？
+
+67. 知道vue3.0中的proxy么？
+
+68. v-if与v-show  computed与watched的区别和应用场景？
+
+69. 浏览器策略--同源策略
+
+70. 写一个函数判断一个字符串回文
+
+71. 写一个方法将多个对象合并成一个对象（大概是这个，当时我理解错了）
+
+72. css写得多不，常用布局
+
+73. vue-router原理
+
+74. 计算机网络中，客户端发送请求到客户端可以怎么发送
+
+75. 用style和.css文件引入css样式有什么不同？分别适用于什么场景？
+
+76. 项目中的公共样式是使用提取出来的单独文件好，还是统一放在style里面好？
+
+77. 使用rem作为手机端适配单位的过程中有没有遇到什么问题？会不会出现用px更好的情况？
+
+78. 什么是http协议？
+
+79. 三次握手中，服务端在发送ACK包+SYN包时做了什么
+
+80. 线程和进程有什么区别
+
+81. 手写一个单向链表
+
+82. vuex请求？原理？
+
+83. vue双向绑定？只知道Object.defineProperty不够
+
+84. 父子传值？vuex、bus，知道eventbus吗？
+
+85. vue生命周期有哪些？destroy用过吗？
+
+86. 手写代码实现一个eventbus。分别实现三种方法listen、trigger、remove
+
+87. 回流和重绘
+
+88. XSS脚本攻击
+
+89. input、onmousedown、onmouseup、click、onfocus之间的区别
+
+90. fetch请求是什么
+
+91. 缓存相关Header
+
+92. node里的事件机制
+
+93. Promise常用API有哪些？
+
+94. await后面跟的是什么？
+
+95. 解释一下es6的Symbol，Symbol解决了什么问题？
+
+96. 介绍一下map和set
+
+97. defineProperty的缺陷？怎么解决这个问题？
+
+98. vuex的工作流程
+
+99. vuex和redux的区别？
+
+100. three.js学得怎么样
+
+101. 学习有关正则表达式的API，例如exec、test
+
+
 
