日常统计修改

--- a/_posts/2019-08-01-工作 常见报错解决.md
+++ b/_posts/2019-08-01-工作 常见报错解决.md
@@ -71,5 +71,12 @@ export const update = (id,num) => {
     })};
 ```
 
+###### 报404的另一种可能
 
+在**域名管理**，配置里面，要将新增的接口名称进行声明，否则就会报找不到
 
+###### 遇到新的报404的情况
+
+vue跳转路由地址无效时，会返回404。
+
+其实是上一种域名管理的特殊情况。
