--- a/_posts/2019-07-11-js相关 面试问题.md
+++ b/_posts/2019-07-11-js相关 面试问题.md
@@ -194,13 +194,19 @@ Chrome中的开发者工具：断点设置、调试功能
 
 #### 6.this的指向问题？
 
-this的最终指向的是那个调用它的对象。
+this的最终指向的是那个**调用它的对象**。
 
 改变this指向的方法：
 
 1. 使用**箭头函数**；
+
+> 箭头函数中的this指向**定义时**当前周围的作用域；
+
 2. 在函数内部使用`_this=this;`
 3. 使用**apply、call、bind**
+
+> `call`是立即执行传递this的；`bind`不是立即执行的，返回的是函数的副本；
+
 4. new**实例化一个对象**；
 
 在非严格模式下，如果如果函数没有用作构造函数，而是仅仅作为普通函数使用的话，那么函数中的this是指向window的。在严格模式下，this的值就是undefined。
