--- a/_posts/2020-03-24-工作 数组方法统计.md
+++ b/_posts/2020-03-24-工作 数组方法统计.md
@@ -16,11 +16,172 @@ typora-root-url: ..
 
 场景：遍历一个数组，找到满足条件的第一项后停止遍历。
 
-参考：
+参考：完全来自于MDN，只是简化成描述+语法，方便自己复习
 
 总结：
 
-foreach的遍历不能中止；
+除了抛出异常外，foreach的遍历不能中止；
 
 some、find可以找到第一个返回true值之后停止；
+
+
+
+> 返回新数组
+
+**concat( )  合并数组** 
+
+此方法不会更改现有数组，而是**返回一个新数组**。
+
+```javascript
+var new_array = old_array.concat(value1[, value2[, ...[, valueN]]])
+```
+
+**copyWithin( )  同一数组内的浅复制**
+
+浅复制数组的一部分到**同一数组**中的另一个位置，并返回它，**不会改变原数组的长度**。
+
+```javascript
+arr.copyWithin(target[, start[, end]])
+// 如果 target 大于等于 arr.length，将会不发生拷贝。
+```
+
+**join( ) 连成一个字符串返回**
+
+将一个数组（**或一个类数组对象**）的所有元素转换成字符串，再用分隔符连接，并返回这个字符串。
+
+如果数组只有一个项目，那么将返回该项目而不使用分隔符；
+
+如果一个元素为 `undefined` 或 `null`，它会被转换为空字符串；
+
+```javascript
+arr.join([separator])
+```
+
+
+
+
+
+> 改变原数组
+
+**fill( )  固定值填充**
+
+用一个固定值填充一个数组中从起始索引到终止索引内的全部元素。不包括终止索引。**改变原数组**。
+
+```javascript
+arr.fill(value[, start[, end]])
+```
+
+
+
+> 遍历数组
+
+**every( )  遍历检测**
+
+测试一个数组内的所有元素是否都能通过某个指定函数的测试。它**返回一个布尔值**。
+
+```javascript
+arr.every(callback[, thisArg])
+```
+
+**filter( )  过滤器**
+
+创建一个新数组，其包含能够通过所提供函数进行测试的所有元素。
+
+```javascript
+var newArray = arr.filter(callback(element[, index[, array]])[, thisArg])
+```
+
+**find( )  找第一个元素的值**
+
+返回数组中满足提供的测试函数的第一个元素的值。否则返回`undefined`。
+
+```javascript
+arr.find(callback[, thisArg])
+```
+
+
+
+**findIndex( )  找第一个元素的索引**
+
+返回数组中满足提供的测试函数的第一个元素的**索引**。否则返回-1。
+
+```javascript
+arr.findIndex(callback[, thisArg])
+```
+
+**indexOf( )  返回首个索引**
+
+返回在数组中可以找到一个给定元素的**第一个索引**；如果不存在，则返回-1。
+
+```javascript
+arr.indexOf(searchElement[, fromIndex])
+```
+
+**lastIndexOf( )  返回最后一个索引**
+
+返回指定元素在数组中的最后一个的索引，如果不存在则返回 -1。
+
+从数组的后面向前查找，从 `fromIndex` 处开始。
+
+```javascript
+arr.lastIndexOf(searchElement[, fromIndex])
+```
+
+
+
+**flat( )  扁平化数组/移除数组空项**
+
+按照一个可指定的深度递归遍历数组，并将所有元素与遍历到的子数组中的元素合并为**一个新数组返回**。
+
+```javascript
+var newArray = arr.flat([depth]);//depth使用Infinity，可展开任意深度的嵌套数组
+```
+
+**flatMap( )  **
+
+首先使用映射函数映射每个元素，然后将结果压缩成一个**新数组**。
+
+它与 map 连着深度值为1的 flat几乎相同，但 `flatMap` 通常在合并成一种方法的效率稍微高一些。
+
+```javascript
+var new_array = arr.flatMap(function callback(currentValue[, index[, array]]) {
+    // return element for new_array
+}[, thisArg])
+```
+
+**forEach( )  遍历**
+
+对数组的每个元素执行一次给定的函数。
+
+```javascript
+arr.forEach(callback(currentValue [, index [, array]])[, thisArg])
+```
+
+**includes( )  是否包含指定值**
+
+判断一个数组是否包含一个指定的值，根据情况，如果包含则返回 true，否则返回false。
+
+```javascript
+arr.includes(valueToFind[, fromIndex]);//开始查找的位置
+```
+
+**keys( )  新的Array迭代器对象**
+
+返回一个包含数组中每个索引键的`Array Iterator`对象。
+
+```javascript
+arr.keys()
+```
+
+
+
+
+
+
+
+
+
+
+
+
 
