--- a/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
+++ b/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
@@ -132,6 +132,22 @@ var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 4, 45, 6]
 ```
 
+新方法：使用reduce
+
+```javascript
+let arr = [1, 23, 34, 45, 1, 6, 4, 23];;
+let result = arr.sort().reduce((init, current) => {
+    if(init.length === 0 || init[init.length-1] !== current) {
+        init.push(current);
+    }
+  // 这里的if也可以使用indexOf方法进行判断是否等于-1
+    return init;
+}, []);
+console.log(result); // [1, 23, 34, 4, 45, 6]
+```
+
+
+
 ### 方法五：双层循环遍历
 
 思路1：有重复值时终止当前循环`i`，进入外层循环`i+1`；找到的是往后遍历不会有重复值的值；
