多行省略号详解

--- a/_posts/2019-08-03-工作遇到的问题小结.md
+++ b/_posts/2019-08-03-工作遇到的问题小结.md
@@ -109,10 +109,10 @@ break-all;
 text-overflow: -o-ellipsis-lastline;
 overflow: hidden;
 text-overflow: ellipsis;
-display: -webkit-box;
--webkit-line-clamp: 2;
+display: -webkit-box;// 必须结合的属性 ，将对象作为弹性伸缩盒子模型显示
+-webkit-line-clamp: 2;// 用来限制在一个块元素显示的文本的行数。 为了实现该效果，它需要组合其他的WebKit属性。
 line-clamp: 2;
--webkit-box-orient: vertical;
+-webkit-box-orient: vertical;//必须结合的属性 ，设置或检索伸缩盒对象的子元素的排列方式
 word-break: break-all;
 ```
 
