事件修饰符
事件修饰符

--- a/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
+++ b/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
@@ -25,9 +25,13 @@ typora-root-url: ..
 
 **清除浮动的方法**：
 
-1. 给**父盒子**设置合适的**高度**；
+1. 给**父盒子**设置合适的**高度、border、padding**；
 
-2. 给**父盒子添加样式 `overflow:hidden/auto;`**（这个属性相当于触发BFC，让父级紧贴内容，包括使用了浮动的盒子）（为了去除兼容性问题，会添加`zoom:1;`）
+2. 【推荐】给**父盒子添加样式 `overflow:hidden/auto;`**
+
+   （这个属性相当于触发BFC，让父级紧贴内容，包括使用了浮动的盒子）
+
+   （为了去除兼容性问题，会添加`zoom:1;`）
 
 3. 在父盒子里面的子盒子后面**添加一个子盒子**，如div，**添加样式 `.clear{ clear:both; }`；**
 
