事件修饰符

--- a/_posts/2020-03-25-工作 ref和$refs的使用.md
+++ b/_posts/2020-03-25-工作 ref和$refs的使用.md
@@ -30,7 +30,7 @@ typora-root-url: ..
   >
   > 如果不是`:ref =某变量`的方式而是 `ref =某字符串`时则不需要加，**如`this.$refs[refsArrayItem]。`**
 
-- 注意：ref 需要在**Dom渲染完成**后才会有，在使用的时候确保Dom已经渲染完成。比如在生命周期 `mounted`钩子中调用，或者在 `this.$nextTick(()=>{}) `中调用。
+- 注意：**ref 需要在Dom渲染完成后才会有，在使用的时候确保Dom已经渲染完成**。比如在生命周期 `mounted`钩子中调用，或者在 `this.$nextTick(()=>{}) `中调用。
 
   ```html
           <div 
