--- a/_posts/2020-04-08-工作 事件修饰符.md
+++ b/_posts/2020-04-08-工作 事件修饰符.md
@@ -80,3 +80,4 @@ Vue.js 为 `v-on` 提供了**事件修饰符**。
   <div v-on:scroll.passive="onScroll">...</div>
   ```
 
+![image-20200408194826396](/img/assets_2019/image-20200408194826396.png)
