--- a/_posts/2018-04-15-工作经验之谈.md
+++ b/_posts/2018-04-15-工作经验之谈.md
@@ -49,3 +49,13 @@ typora-root-url: ..
 2、如果页面有提示报错，一定要排查，可能是哪里**请求失败了没做兼容**，导致代码没有走下去
 
 总结：
+
+> ​	背景色铺满全屏
+
+```css
+background-color:#f2f4f6;
+height:100vh;
+```
+
+
+
