git常用的整理归纳

--- a/_posts/2018-04-15-工作经验之谈.md
+++ b/_posts/2018-04-15-工作经验之谈.md
@@ -40,6 +40,12 @@ typora-root-url: ..
 
 总结：
 
+场景：有时候用charles连环境，只能访问到环境，不能访问到机器
+
+参考：可能是cookie没中上，确认当前请求时，有没有cookie
+
+总结：确认当前环境是使用append还是modify进行抓包
+
 > 关于页面打不开
 
 场景：产品给的活动链接页面打不开
@@ -48,14 +54,24 @@ typora-root-url: ..
 
 2、如果页面有提示报错，一定要排查，可能是哪里**请求失败了没做兼容**，导致代码没有走下去
 
-总结：
+总结：学会部分注释，查看哪里阻塞了页面加载
 
-> ​	背景色铺满全屏
+> 背景色铺满全屏
 
 ```css
 background-color:#f2f4f6;
 height:100vh;
 ```
+
+> 文字折叠
+
+场景：不同手机上面，由于渲染尺寸不同，导致给了宽度的盒子里面的内容，折叠了
+
+参考：可以给padding撑开盒子，让文字撑开整个盒子
+
+总结：注意不同机型的适配
+
+
 
 
 
