--- a/_posts/2020-03-24-工作 数组方法统计.md
+++ b/_posts/2020-03-24-工作 数组方法统计.md
@@ -26,14 +26,120 @@ some、find可以找到第一个返回true值之后停止；
 
 
 
+##### 判断对象是不是数组类型？：不是
+
+1. instanceof 关键字
+
+   ```javascript
+   var obj={};
+   console.log(obj instanceof Array);//false
+   ```
+
+2. Array.isArray ( 对象 )
+
+   ```javascript
+   var obj={};
+   console.log(Array.isArray(obj));//false
+   ```
+
+
+常用的方法整理：
+
+**栈方法：**
+
+- **入栈**：利用Array对象提供的栈方法实现在数组的末尾、开头添加数组的新元素；
+- **出栈**：在数组的末尾、开头删除数组的元素；
+
+| 方法名称    | 功能描述                                                     |
+| ----------- | ------------------------------------------------------------ |
+| push（）    | 将1个/多个元素**添加**到数组的**末尾**，并返回数组的**新长度** |
+| unshift（） | 将1个/多个元素**添加**到数组的**开头**，并返回数组的**新长度** |
+| pop（）     | 从数组的**末尾移出**一个元素，并返回这个**元素的值**，若空数组则返回undefined |
+| shift（）   | 从数组的**开头移出**一个元素，并返回这个**元素的值**，若空数组则返回undefined |
+
+**检索方法：**
+
+| 方法名称            | 功能描述                                                     |
+| :------------------ | ------------------------------------------------------------ |
+| includes（）        | 用于确定数组中**是否含有**某元素。有--true，没有--false      |
+| Array.isArray（）   | 用于确定传递的值**是不是**一个Array。是--true，不是--false   |
+| indexOf（26,-3）    | 返回在数组中找到的给定值的**第一个索引**。如果不存在则返回-1 |
+| lastIndexOf（26,3） | 返回在数组中找到的给定值的**最后一个索引**。如果不存在则返回-1 |
+
+注意：如上所示例子，查找数组中的26，从*arr.length*-3和第三个位置开始搜索。【为负数的索引，为数组长度加上该负数】
+
+**数组转字符串类型：**
+
+| 方法名称     | 功能描述                                                     |
+| :----------- | ------------------------------------------------------------ |
+| join（'-'）  | 数组的所有元素连接到一个字符串；区别于下面：可**指定连接数组元素的符号** |
+| toString（） | 返回一个字符串，表示指定的数组及元素                         |
+
+其他方法：
+
+| 方法名称    | 功能描述                                                     |
+| :---------- | ------------------------------------------------------------ |
+| sort（）    | 对数组的元素进行**排序**，并返回数组                         |
+| fill（）    | 用一个固定值填充数组中指定下标范围内的全部元素               |
+| reverse（） | **颠倒**数组中元素的位置                                     |
+| splice（）  | 在数组的指定下标范围内进行**删除/添加**元素；参数1：指定下标开始；参数2：指定**删除的个数**，若为0，则代表该方法只添加元素；剩余参数都是要添加的数组元素 |
+| slice（）   | 在数组指定的下标范围内拷贝数组元素到一个**新数组**中。对原数组没影响 |
+| concat（）  | 返回合并了两个/多个数组后的**新数组**。对原数组没影响        |
+
+ 上述部分功能代码描述：
+
+```javascript
+// .reverse();----->反转数组
+	var arr=[10,20,30,40,50];
+	arr.reverse();//反转
+	console.log(arr);//50,40,30,20,10
+
+// .sort();---排序的,可能不稳定,如果不稳定,请写MDN中的那个固定的代码
+	var arr=[1,40,20,10,100];
+	//a---arr[j]   //b---arr[j+1]
+	arr.sort(function (a,b) {
+	// sort写法不稳定的时候写下面的固定代码
+        if(a>b){
+            return 1;
+        }else if(a==b){
+            return 0;
+        }else{
+            return -1;
+        }
+        });
+        console.log(arr);//[1, 10, 20, 40, 100]
+
+// .slice(开始的索引,结束的索引);把截取的数组的值放在一个新的数组中,但是不包含结束的索引对应的元素值
+	var arr=[10,20,30,40,50,60,70,80,90,100];
+	var newArr= arr.slice(3,7);
+	console.log(newArr);//40 50 60 70 
+
+// .splice(开始的位置,要删除的个数,替换的元素的值);一般是用于删除数组中的元素,或者是替换元素,或者是插入元素
+	var myFish = ['angel', 'clown', 'mandarin', 'sturgeon'];
+
+	myFish.splice(2, 0, 'drum'); // 在索引为2的位置插入'drum',插入后原来的往后移
+	// myFish 变为 ["angel", "clown", "drum", "mandarin", "sturgeon"]
+
+	myFish.splice(2, 1); // 从索引为2的位置删除一项（也就是'drum'这一项）
+	// myFish 变为 ["angel", "clown", "mandarin", "sturgeon"]
+```
+
+
+
+根据是否改变当前数组，进行了简易分类：
+
 > 返回新数组
 
-**concat( )  合并数组** 
+**concat( )  拼接、合并数组** 
 
 此方法不会更改现有数组，而是**返回一个新数组**。
 
 ```javascript
 var new_array = old_array.concat(value1[, value2[, ...[, valueN]]])
+// 例如
+var arr1=[10,20,30];
+var arr2=[40,50,60];
+console.log(arr1.concat(arr2));//[10, 20, 30, 40, 50, 60]
 ```
 
 **copyWithin( )  同一数组内的浅复制**
@@ -55,9 +161,10 @@ arr.copyWithin(target[, start[, end]])
 
 ```javascript
 arr.join([separator])
+var arr=["小白","小黑","小红","小芳","小绿","小苏"];
+var str=arr.join("|");
+console.log(str);//小白|小黑|小红|小芳|小绿|小苏
 ```
-
-
 
 
 
@@ -178,18 +285,45 @@ if (!Array.prototype.mapUsingReduce) {
 
 **every( )  遍历检测**
 
-测试一个数组内的所有元素是否都能通过某个指定函数的测试。它**返回一个布尔值**。
+测试一个数组内的**所有元素/每个元素**是否都能通过某个指定函数的测试。它**返回一个布尔值**。
 
 ```javascript
 arr.every(callback[, thisArg])
+//函数中有三个参数,第一个参数是元素的值；第二个参数是索引值；第三个参数是原来的数组；
+
+//案例1：
+	var arr=[1000,2000,3000];
+		//a: 元素的值	 //b: 索引的值	 //c:谁调用了这个方法,那么c就是谁-->arr
+	var flag= arr.every(function (a,b) {
+		return a>2000;//数组中的每个元素的值都要大于2000的情况,最后才返回true
+	});//false
+
+//案例2：
+	var arr=["小明明lkko","小曹操674","小白白bd","笑眯眯a"];
+	var flag=arr.every(function (ele,index) {
+		return ele.length>4;
+	});//false,"笑眯眯a"长度为4
 ```
 
 **filter( )  过滤器**
 
-创建一个新数组，其包含能够通过所提供函数进行测试的所有元素。
+创建一个新数组，其包含能够通过所提供函数进行测试的**所有元素**。
 
 ```javascript
 var newArray = arr.filter(callback(element[, index[, array]])[, thisArg])
+//案例1：
+	var arr=[10,20,30,40,50,60,70,80];
+	var newArr=arr.filter(function (ele) {//ele---每个元素
+		return ele>40;
+	});
+	console.log(newArr);//[50,60,70,80]
+//案例2：
+	var arr=[10,0,20,0,40,0,60,100];
+	var newArr=arr.filter(function (ele) {
+		return ele!=0;
+	});
+	console.log(newArr);//[10, 20, 40, 60, 100]
+	
 ```
 
 **find( )  找第一个元素的值**
@@ -234,14 +368,23 @@ var new_array = arr.flatMap(function callback(currentValue[, index[, array]]) {
 var new_array = arr.map(function callback(currentValue[, index[, array]]) {
  // Return element for new_array 
 }[, thisArg])
+// 案例
+var numbers = [1, 4, 9];
+var roots = numbers.map(Math.sqrt);
+console.log(roots);//1,2,3
 ```
 
-**forEach( )  遍历**
+**forEach( )  遍历数组**
 
 对数组的每个元素执行一次给定的函数。
 
 ```javascript
 arr.forEach(callback(currentValue [, index [, array]])[, thisArg])
+var arr = [10, 20, 30, 40];
+arr.forEach(function (ele,index) {
+		console.log(ele+'=='+index);
+});//10==0 20==1 30==2 40==3
+
 ```
 
 **includes( )  是否包含指定值**
@@ -297,6 +440,9 @@ arr.findIndex(callback[, thisArg])
 
 ```javascript
 arr.indexOf(searchElement[, fromIndex])
+var arr=[10,20,30,40];
+var index=arr.indexOf(300);
+console.log(index);//-1
 ```
 
 **lastIndexOf( )  返回最后一个索引**
