git撤销上一次commit的提交

--- a/_posts/2020-05-09-工作 git的使用.md
+++ b/_posts/2020-05-09-工作 git的使用.md
@@ -25,6 +25,7 @@ git pull origin #先拉一下分支
 git checkout branch # 切换到指定分支
 git add ./指定文件名（带路径）
 git commit -m '简要描述这次修改/解决的问题'
+git reset HEAD~ #撤销上一次的commit操作
 git status # 在每一步操作后都可以执行一下，看下现在的状态
 git pull origin # 再拉一下远程代码，确认冲突
 git push
