添加时间戳的插件date-fns使用方法

--- a/_posts/2020-04-12-工作 时间戳处理.md
+++ b/_posts/2020-04-12-工作 时间戳处理.md
@@ -20,6 +20,18 @@ typora-root-url: ..
 
 总结：
 
+##### 4、处理时间戳的插件 date-fns
+
+```javascript
+import {format} from 'date-fns';
+
+filters: {
+        formatTimeStamp: (ts) => format(ts * 1000, 'yyyy-MM-dd hh:mm:ss'),
+    },
+      
+<span>{{ info.time | formatTimeStamp }}</span>
+```
+
 ##### 1、new Date()获取的时间是什么时间
 
 答：**运行环境的时间**。如果是浏览器那就是电脑时间或者手机时间；如果是node.js那就是服务器时间
@@ -101,4 +113,3 @@ that.setData({
      createTime:time.timeFormatTime(ss, 'Y/M/D')
 })
 ```
-
