--- a/_posts/2020-05-22-webpack自学经验记录.md
+++ b/_posts/2020-05-22-webpack自学经验记录.md
@@ -85,3 +85,37 @@ webpack.dev.config.js中相关配置：
 ##### 写plugin
 
 webpack运行的生命周期中会广播很多事件，Plugin可以监听这些时间，在合适的时机，通过Webpack提供的API改变输出结果。
+
+##### 实现启动某一个页面
+
+在项目中，不是每次用devserver起服务，都需要启动每一个页面的，一般都是启动指定路径的页面就可以了。这里写了一个方法，简单逻辑是：先获取代码输入的文件路径，生成一个正则表达式；遍历所有文件entries，只要正则匹配不到的路径全部删除
+
+```javascript
+第一步：获取到本项目的所有entries对象
+```
+
+![image-20200522134833544](/img/assets_2019/image-20200522134833544.png)
+
+```
+第二步：获取到输入语句中的路径 --path形式传入
+```
+
+![image-20200522134904684](/img/assets_2019/image-20200522134904684.png)
+
+```
+第三步：如果输入了路径，那么就用正则匹配获取入口文件数组中想要到路径
+```
+
+![image-20200522134951629](/img/assets_2019/image-20200522134951629.png)
+
+```
+ 第四步：输出需要启动的入口路径
+```
+
+![image-20200522135015775](/img/assets_2019/image-20200522135015775.png)
+
+```
+第五步：启动指定的单个页面
+```
+
+![image-20200522135046916](/img/assets_2019/image-20200522135046916.png)
