数组去重方法--set的数组、字符串去重

--- a/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
+++ b/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
@@ -205,6 +205,14 @@ var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 45, 6, 4]
 ```
 
+```js
+// 去除数组的重复成员
+[...new Set(array)]
+//上面的方法也可以用于，去除字符串里面的重复字符。
+[...new Set('ababbc')].join('')
+// "abc"
+```
+
 ### 方法七：ES6的 `Array.filter()`
 
 思路：利用`Array.filter()`方法的过滤方法，将数组进行过滤，筛选条件是数组下标与检索下标一致。
