--- a/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
+++ b/_posts/算法、刷题/2019-07-16-数组去重（算法整理）.md
@@ -199,7 +199,8 @@ unique(arr);//[1, 23, 34, 45, 6, 4]
 function unique(arr){
   	var x = new Set(arr);
  	return [...x];//这里直接返回x的话，结果是Set(6){1, 23, 34, 45, 6, 4}
-    //上面的两行代码可以简写成：return Array.from(new Set([...arr]))
+    //上面的两行代码可以简写成：
+  return Array.from(new Set([...arr]))
 }
 var arr = [1, 23, 34, 45, 1, 6, 4, 23];
 unique(arr);//[1, 23, 34, 45, 6, 4]
